# gtk-docker

./: Dockerfile  Makefile  README.md
src/gtk-app/: Makefile  main.c
src/gtkmm-app/: Makefile  main.cpp  meson.build  window.cpp  window.h
